Renamed home.html to index.html and updated internal links

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <img src="d/Brown Vintage Scrapbook Welcome Channel Youtube Intro Video.png" alt="Logo" class="logo">
       <nav>
         <ul>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="universities.html">Universities</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="degrees.html">Degrees</a></li>
