--- a/p.html
+++ b/p.html
@@ -144,7 +144,7 @@
     </div>
 
     <!-- Return to Home Button -->
-    <a href="home.html" class="button">Return to Home</a>
+    <a href="index.html" class="button">Return to Home</a>
   </div>
 
   <!-- Console Login System -->
@@ -152,7 +152,7 @@
     console.log("%cWelcome to the Secret Society", "color: #8b0000; font-size: 20px; font-weight: bold;");
     console.log("%cTo proceed, enter the secret password.", "color: #ccc; font-size: 16px;");
 
-    const secretPassword = "sellYourSoul"; // Set the secret password
+    const secretPassword = 999; // Set the secret password
     let attempts = 3; // Number of attempts allowed
 
     function checkPassword() {
