--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="container">
-      <img src="Brown Vintage Scrapbook Welcome Channel Youtube Intro Video.png" alt="Logo" class="logo">
+      <img src="d/Brown Vintage Scrapbook Welcome Channel Youtube Intro Video.png" alt="Logo" class="logo">
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -48,9 +48,9 @@
     <div class="container">
       <p>&copy; 2023 Education Consultancy. All rights reserved.</p>
       <div class="footer-logos">
-        <img src="5296499_fb_facebook_facebook logo_icon.png" alt="Facebook">
-        <img src="5296516_tweet_twitter_twitter logo_icon.png" alt="Twitter">
-        <img src="whatsapp_2504957.png" alt="Whatsapp">
+        <img src="d/5296499_fb_facebook_facebook logo_icon.png" alt="Facebook">
+        <img src="d/5296516_tweet_twitter_twitter logo_icon.png" alt="Twitter">
+        <img src="d/whatsapp_2504957.png" alt="Whatsapp">
       </div>
     </div>
   </footer>
