update logo in university

--- a/universities.html
+++ b/universities.html
@@ -53,7 +53,7 @@
       </div>
       <div class="filter-group">
         <a href="#" id="government-btn" class="filter-btn icon-btn">
-          <img src="d/3319637_bank_building_government_panteon_icon.png" alt="Government">
+          <img src="d/gn.png" alt="Government">
         </a>
         <a href="#" id="private-btn" class="filter-btn icon-btn">
           <img src="d/4634986_moneys_financial_layers_money_icon.png" alt="Private">
