--- a/p.html
+++ b/p.html
@@ -148,7 +148,7 @@
     console.log("%cWelcome to the Secret Society", "color: #8b0000; font-size: 20px; font-weight: bold;");
     console.log("%cTo proceed, enter the secret password.", "color: #ccc; font-size: 16px;");
 
-    const secretPassword = 999;
+    const secretPassword = '999';
     let attempts = 3;
 
     function checkPassword() {
@@ -169,7 +169,7 @@
       }
     }
 
-    checkPassword(); // Trigger the password check
+    checkPassword(); 
 
     // Agreement Button Logic
     const agreementBtn = document.getElementById("agreementBtn");
